# sales-mastery

./: README.md  main.py  pyproject.toml
database/: customers.csv  products.csv  sales.csv
src/: main.py  sales_file_analysis.py  sales_full.csv
